2016-04-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amcrc32chw.c: Add fall through comment

2016-04-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/event.c (fire): Allow for NULL callback

2016-04-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/tape-device.c: improve error message on write fail

2016-04-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c: Remove for startq

2016-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: use bsdtar_realpath

2016-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/syshacks.m4: accept *-apple-darwin*
	* common-src/conffile.c, common-src/conffile.h, common-src/match.c,
	  common-src/match.h, perl/Amanda/Config.swg, perl/Amanda/Util.swg,
	  server-src/amadmin.c, server-src/amcheck.c, server-src/planner.c,
	  server-src/tapefile.c: s/labeltsr_t/labelstr_s/ and
	  s/policy_t/policy_s/g because they are defined on OSX.

2016-03-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Use property from header instead of from
	  disklist

2016-03-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Xfer.pl: Validate CRC and part size

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS: Add new amadmin command and amtape inventory result

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Labels.pm: Add the RentetionType in result
	* perl/Amanda/Rest/Storages.pm: Add the RentetionType in result
	* installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Storages.pl: Fix for new result

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtape.pl: Add the RetentionType in the inventory result

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c: Add retention command
	* server-src/amadmin_perl.pl: Implement retention command