@@ -18,7 +18,7 @@
 # Contact information: Carbonite Inc., 756 N Pastoria Ave
 # Sunnyvale, CA 94086, USA, or: http://www.zmanda.com
 
-use Test::More tests => 171;
+use Test::More tests => 173;
 
 use strict;
 use warnings;
@@ -798,5 +798,14 @@ is($Installcheck::Run::exit_code, 0,
     "amreport correctly report multi-taper (success)");
 results_match($out_filename, $cat->get_text('report'),
     "..result matches 24");
+
+setup_config(catalog => 'dumper-tryagain', want_template => 0);
+
+config_init($CONFIG_INIT_EXPLICIT_NAME, "TESTCONF");
+run($amreport, 'TESTCONF', '-f', $out_filename);
+is($Installcheck::Run::exit_code, 4,
+    "amreport correctly report try-again (error)");
+results_match($out_filename, $cat->get_text('report'),
+    "..result matches 25");
 
 cleanup();
