@@ -652,12 +652,12 @@ sub output_error_summaries
 		    push @dump_failures, "$hostname $qdisk lev $try->{dumper}->{level}  FAILED $try->{dumper}->{error}";
 		    $failed = 1;
 		}
-		if (exists $try->{chunker} &&
+		if (exists $try->{chunker} && exists $try->{dumper} && !exists $dle->{driver} &&
 		    $try->{chunker}->{status} eq 'fail') {
 		    push @dump_failures, "$hostname $qdisk lev $try->{chunker}->{level}  FAILED $try->{chunker}->{error}";
 		    $failed = 1;
 		}
-		if (   exists $try->{taper}
+		if (   exists $try->{taper} && exists $try->{dumper} && !exists $dle->{driver}
 		    && (   $try->{taper}->{status} eq 'fail'
 			|| (   $try->{taper}->{status} eq 'partial'))) {
 		    my $flush = "FLUSH";
@@ -695,7 +695,7 @@ sub output_error_summaries
 
 		# detect dumps re-flushed from holding
 		if (   $failed
-		    && !exists $try->{dumper}
+		    && !exists $try->{dumper} && !exists $dle->{driver}
 		    && !exists $try->{chunker}
 		    && exists $try->{taper}
 		    && $try->{taper}->{status} eq "done") {
@@ -1338,6 +1338,8 @@ sub get_summary_info
 		last;
 	    }
 	}
+	# Do not report taper/chunker error if no dumper for this run and driver error
+	next if (!$dumper && $timestamp eq $report->get_timestamp() && $dle_info->{'driver'} && $dle_info->{'driver'}->{'status'} eq 'fail');
 	$orig_size = $dumper->{orig_kb}
 	    if defined $dumper;
 
